# Airline-Man07

./: .gitignore  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: easy_task.json  hard_task.json  medium_task.json
env/: __init__.py  environment.py  graders.py  models.py  rewards.py  tasks.py
frontend/: index.html
server/: app.py
tests/: test_graders.py  test_reset.py  test_rewards.py  test_step.py
